<resources>
    <string name="app_name">Nanodegree</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_main_screen_title">My Nanodegree Apps!</string>
    <string name="lbl_spotify_streamer">Spotify Streamer</string>
    <string name="lbl_scores_app">Scores App</string>
    <string name="lbl_library_app">Library App</string>
    <string name="lbl_build_it_biggre">Build It Bigger</string>
    <string name="lbl_xyz_reader">XYZ Reader</string>
    <string name="lbl_capstone">Capstone: My Own App</string>
    <string name="title_activity_spotify">SpotifyActivity</string>
    <string name="hint_search_for_artist">Artist name</string>
</resources>
