<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/default_space"
            android:text="@string/lbl_main_screen_title"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <Button
            android:id="@+id/spotify_streamer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/scores_app"
            android:layout_alignLeft="@+id/scores_app"
            android:layout_alignRight="@+id/scores_app"
            android:layout_alignStart="@+id/scores_app"
            android:layout_below="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_button_orange"
            android:text="@string/lbl_spotify_streamer"/>

        <Button
            android:id="@+id/scores_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/library_app"
            android:layout_alignLeft="@+id/library_app"
            android:layout_alignRight="@+id/library_app"
            android:layout_alignStart="@+id/library_app"
            android:layout_below="@+id/spotify_streamer"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_button_orange"
            android:text="@string/lbl_scores_app"/>

        <Button
            android:id="@+id/library_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/build_it_bigger"
            android:layout_alignLeft="@+id/build_it_bigger"
            android:layout_alignRight="@+id/build_it_bigger"
            android:layout_alignStart="@+id/build_it_bigger"
            android:layout_below="@+id/scores_app"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_button_orange"
            android:text="@string/lbl_library_app"/>

        <Button
            android:id="@+id/build_it_bigger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/xyz_reader"
            android:layout_alignLeft="@+id/xyz_reader"
            android:layout_alignRight="@+id/xyz_reader"
            android:layout_alignStart="@+id/xyz_reader"
            android:layout_below="@+id/library_app"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_button_orange"
            android:text="@string/lbl_build_it_biggre"/>

        <Button
            android:id="@+id/xyz_reader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/capstone"
            android:layout_alignLeft="@+id/capstone"
            android:layout_alignRight="@+id/capstone"
            android:layout_alignStart="@+id/capstone"
            android:layout_below="@+id/build_it_bigger"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_button_orange"
            android:text="@string/lbl_xyz_reader"/>

        <Button
            android:id="@+id/capstone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/xyz_reader"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_button_red"
            android:textColor="@color/text_inverted"
            android:text="@string/lbl_capstone"/>
    </RelativeLayout>

</ScrollView>
